strip project template

--- a/HandballResults/HandballResults/Views/Games/Schedule.cshtml
+++ b/HandballResults/HandballResults/Views/Games/Schedule.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Resultate";
 }
 
-<h2>Resultate</h2>
+<h2>Spielplan</h2>
 <ul>
     @{
         foreach (var game in Model.Games)
