--- a/HandballResults/HandballResults/Content/Site.css
+++ b/HandballResults/HandballResults/Content/Site.css
@@ -1,24 +1,12 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿table td {
+    padding: 5px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+table thead {
+    background-color: #333;
+    color: white;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+table tbody tr:hover {
+    background-color: lightgray;
 }
