--- a/HandballResults/HandballResults/Content/Site.css
+++ b/HandballResults/HandballResults/Content/Site.css
@@ -3,10 +3,10 @@
 }
 
 table thead {
-    background-color: #333;
+    background-color: rgba(36, 95, 163, 1); /*#333*/;
     color: white;
 }
 
 table tbody tr:hover {
-    background-color: lightgray;
+    background-color: rgba(63, 68, 74, 0.1) /*lightgray;*/
 }
