--- a/HandballResults/HandballResults/Views/Teams/Index.cshtml
+++ b/HandballResults/HandballResults/Views/Teams/Index.cshtml
@@ -24,7 +24,7 @@
                     <td>@game.TeamAName</td>
                     <td>@game.TeamBName</td>
                     <td>@game.Venue</td>
-                    <td><a href="https://www.handball.ch/de/matchcenter/spiele/@game.GameId">&raquo;</a></td>
+                    <td><a target="_blank" href="https://www.handball.ch/de/matchcenter/spiele/@game.GameId">&raquo;</a></td>
                 </tr>
             }
         }
@@ -94,7 +94,7 @@
                 <td>@game.TeamAName</td>
                 <td><b>@game.TeamAScoreFt:@game.TeamBScoreFt</b> (@game.TeamAScoreHt:@game.TeamBScoreHt)</td>
                 <td>@game.TeamBName</td>
-                <td><a href="https://www.handball.ch/de/matchcenter/spiele/@game.GameId">&raquo;</a></td>
+                <td><a target="_blank" href="https://www.handball.ch/de/matchcenter/spiele/@game.GameId">&raquo;</a></td>
             </tr>
         }
     }
