--- a/HandballResults/HandballResults/Views/Shared/_Layout.cshtml
+++ b/HandballResults/HandballResults/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed"/>
 </head>
 <body>
     <div class="container body-content">
