--- a/HandballResults/HandballResults/Views/Shared/_Layout.cshtml
+++ b/HandballResults/HandballResults/Views/Shared/_Layout.cshtml
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed"/>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed"/>
+
 </head>
 <body>
     <div class="container body-content">
