--- a/HandballResults/HandballResults/Views/Games/Schedule.cshtml
+++ b/HandballResults/HandballResults/Views/Games/Schedule.cshtml
@@ -5,15 +5,47 @@
 }
 
 <h2>Spielplan</h2>
-<ul>
+<table class="wide">
+    <thead>
+    <tr>
+        <td>Datum</td>
+        <td>Heim</td>
+        <td>Gast</td>
+        <td>Halle</td>
+        <td>&nbsp;</td>
+    </tr>
+    </thead>
+    <tbody>
     @{
         foreach (var game in Model.Games)
         {
-            <li onclick="location.href='https://www.handball.ch/de/matchcenter/spiele/@game.GameId'">
-                <span>@game.GameDateTime.ToString("ddd dd.MMM HH:mm") | @game.Venue</span><br/>
-                <span>@game.TeamAName - @game.TeamBName</span><br/>
-                <span>@game.LeagueLong</span>
+            <tr>
+                <td>@game.GameDateTime.ToString("ddd dd.MMM HH:mm")</td>
+                <td>@game.TeamAName</td>
+                <td>@game.TeamBName</td>
+                <td>@game.Venue</td>
+                <td><a target="_blank" href="https://www.handball.ch/de/matchcenter/spiele/@game.GameId">&raquo;</a></td>
+            </tr>
+        }
+    }
+    </tbody>
+</table>
 
+<ul class="narrow games">
+    @{
+        foreach (var game in Model.Games)
+        {
+            <li onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
+                <a href="">
+                    <div class="col">
+                        <div class="info">@game.GameDateTime.ToString("ddd dd.MMM HH:mm") | @game.Venue</div>
+                        <div>@game.TeamAName : @game.TeamBName</div>
+                        <div>@game.LeagueLong</div>
+                    </div>
+                    <div class="col">
+                        >
+                    </div>
+                </a>
             </li>
         }
     }
