--- a/HandballResults/HandballResults/Views/Games/Schedule.cshtml
+++ b/HandballResults/HandballResults/Views/Games/Schedule.cshtml
@@ -19,12 +19,13 @@
     @{
         foreach (var game in Model.Games)
         {
-            <tr>
+            <tr class="link" 
+                    onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
                 <td>@game.GameDateTime.ToString("ddd dd.MMM HH:mm")</td>
                 <td>@game.TeamAName</td>
                 <td>@game.TeamBName</td>
                 <td>@game.Venue</td>
-                <td><a target="_blank" href="https://www.handball.ch/de/matchcenter/spiele/@game.GameId">&raquo;</a></td>
+                <td>&gt;</td>
             </tr>
         }
     }
