--- a/HandballResults/HandballResults/Content/Site.css
+++ b/HandballResults/HandballResults/Content/Site.css
@@ -31,8 +31,12 @@ table tbody tr:hover {
     height: 30px;
 }
 
-.container {
+.shv-container {
     margin-bottom: 5px;
+}
+
+.shv-container p {
+    display: none;
 }
 
 .link {
@@ -46,7 +50,6 @@ table tbody tr:hover {
 
 ul.games {
     list-style-type: none;
-    display: block;
     padding: 0;
 }
 
