--- a/HandballResults/HandballResults/Views/Games/Results.cshtml
+++ b/HandballResults/HandballResults/Views/Games/Results.cshtml
@@ -18,7 +18,7 @@
     </thead>
     <tbody>
         @{
-            foreach (var game in Model.Games)
+            foreach (var game in Model.GetVisibleGames())
             {
                 <tr class="link" 
                     onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
@@ -36,7 +36,7 @@
 
 <ul class="narrow games">
     @{
-        foreach (var game in Model.Games)
+        foreach (var game in Model.GetVisibleGames())
         {
             <li onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
                 <a href="">
