use dependency injection

--- a/HandballResults/HandballResults/Views/Teams/Index.cshtml
+++ b/HandballResults/HandballResults/Views/Teams/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HandballResults.Models.TeamsViewModel
 
 @{
-    ViewBag.Title = "Tabelle";
+    ViewBag.Title = "Resultate & Spiele";
 }
 
 <div id="schedule" class="shv-container">
