--- a/HandballResults/HandballResults/Views/Shared/_Layout.cshtml
+++ b/HandballResults/HandballResults/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/application")
     @RenderSection("scripts", required: false)
     <script type="text/javascript">
         function openInNewWindow(url) {
