--- a/HandballResults/HandballResults/Views/Games/Schedule.cshtml
+++ b/HandballResults/HandballResults/Views/Games/Schedule.cshtml
@@ -1,53 +1,83 @@
 ﻿@model HandballResults.Models.GamesViewModel
 
 @{
-    ViewBag.Title = "Resultate";
+    ViewBag.Title = "Spielplan";
 }
 
-<h2>Spielplan</h2>
-<table class="wide">
-    <thead>
-    <tr>
-        <td>Datum</td>
-        <td>Heim</td>
-        <td>Gast</td>
-        <td>Halle</td>
-        <td>&nbsp;</td>
-    </tr>
-    </thead>
-    <tbody>
-    @{
-        foreach (var game in Model.GetVisibleGames())
-        {
-            <tr class="link" 
-                    onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
-                <td>@game.GameDateTime.ToString("ddd dd.MMM HH:mm")</td>
-                <td>@game.TeamAName</td>
-                <td>@game.TeamBName</td>
-                <td>@game.Venue</td>
-                <td>&gt;</td>
-            </tr>
-        }
-    }
-    </tbody>
-</table>
+<div id="schedule-container">
 
-<ul class="narrow games">
-    @{
-        foreach (var game in Model.GetVisibleGames())
-        {
-            <li onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
-                <a href="">
-                    <div class="col">
-                        <div class="info">@game.GameDateTime.ToString("ddd dd.MMM HH:mm") | @game.Venue</div>
-                        <div>@game.TeamAName : @game.TeamBName</div>
-                        <div>@game.LeagueLong</div>
-                    </div>
-                    <div class="col">
-                        >
-                    </div>
-                </a>
-            </li>
+    <h2>Spielplan</h2>
+    <table class="wide">
+        <thead>
+        <tr>
+            <td>Datum</td>
+            <td>Heim</td>
+            <td>Gast</td>
+            <td>Halle</td>
+            <td>&nbsp;</td>
+        </tr>
+        </thead>
+        <tbody>
+        @{
+            foreach (var game in Model.Games)
+            {
+                <tr class="link hidden"
+                    onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
+                    <td>@game.GameDateTime.ToString("ddd dd.MMM HH:mm")</td>
+                    <td>@game.TeamAName</td>
+                    <td>@game.TeamBName</td>
+                    <td>@game.Venue</td>
+                    <td>&gt;</td>
+                </tr>
+            }
         }
+        </tbody>
+    </table>
+
+    <ul class="narrow games">
+        @{
+            foreach (var game in Model.Games)
+            {
+                <li class="hidden" onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
+                    <a href="">
+                        <div class="col">
+                            <div class="info">@game.GameDateTime.ToString("ddd dd.MMM HH:mm") | @game.Venue</div>
+                            <div>@game.TeamAName : @game.TeamBName</div>
+                            <div>@game.LeagueLong</div>
+                        </div>
+                        <div class="col">
+                            >
+                        </div>
+                    </a>
+                </li>
+            }
+        }
+    </ul>
+
+    <p><a id="schedule-visibility-switch" href="#schedule" data-alternative-text="weniger anzeigen">alle anzeigen</a></p>
+</div>
+
+<script type="text/javascript">
+    var schedule;
+
+    function initSchedule() {
+        var switchSelector = "#schedule-visibility-switch";
+        $(switchSelector).click(function() {
+            schedule.toggle();
+        });
+
+        schedule = gamesModule.games(["#schedule-container table tbody tr", "#schedule-container ul li"], switchSelector);
+        schedule.hideMost();
     }
-</ul>
+</script>
+
+
+@section scripts
+{
+    <script type="text/javascript">
+        
+        $(document).ready(function () {
+            initSchedule();
+        });
+    </script>
+}
