--- a/HandballResults/HandballResults/Views/Games/Schedule.cshtml
+++ b/HandballResults/HandballResults/Views/Games/Schedule.cshtml
@@ -7,32 +7,34 @@
 <div id="schedule-container">
 
     <h2>Spielplan</h2>
-    <table class="wide">
-        <thead>
-        <tr>
-            <td>Datum</td>
-            <td>Heim</td>
-            <td>Gast</td>
-            <td>Halle</td>
-            <td>&nbsp;</td>
-        </tr>
-        </thead>
-        <tbody>
-        @{
-            foreach (var game in Model.Games)
-            {
-                <tr class="link hidden"
-                    onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
-                    <td>@game.GameDateTime.ToString("ddd dd.MMM HH:mm")</td>
-                    <td>@game.TeamAName</td>
-                    <td>@game.TeamBName</td>
-                    <td>@game.Venue</td>
-                    <td>&gt;</td>
-                </tr>
+    <div class="wide">
+        <table>
+            <thead>
+            <tr>
+                <td>Datum</td>
+                <td>Heim</td>
+                <td>Gast</td>
+                <td>Halle</td>
+                <td>&nbsp;</td>
+            </tr>
+            </thead>
+            <tbody>
+            @{
+                foreach (var game in Model.Games)
+                {
+                    <tr class="link hidden"
+                        onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
+                        <td>@game.GameDateTime.ToString("ddd dd.MMM HH:mm")</td>
+                        <td>@game.TeamAName</td>
+                        <td>@game.TeamBName</td>
+                        <td>@game.Venue</td>
+                        <td>&gt;</td>
+                    </tr>
+                }
             }
-        }
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 
     <ul class="narrow games">
         @{
