--- a/HandballResults/Views/Games/Results.cshtml
+++ b/HandballResults/Views/Games/Results.cshtml
@@ -12,6 +12,7 @@
             <thead>
             <tr>
                 <td>Datum</td>
+                <td>Liga</td>
                 <td>Heim</td>
                 <td>Gast</td>
                 <td>Resultat</td>
@@ -26,6 +27,7 @@
                     <tr class="link"
                         onclick="openInNewWindow('https://www.handball.ch/de/matchcenter/spiele/@game.GameId')">
                         <td>@game.GameDateTime.ToString("ddd dd.MMM HH:mm")</td>
+                        <td>@game.LeagueLong</td>
                         <td>@game.TeamAName</td>
                         <td><b>@game.TeamAScoreFt:@game.TeamBScoreFt</b> (@game.TeamAScoreHt:@game.TeamBScoreHt)</td>
                         <td>@game.TeamBName</td>
