--- a/HandballResults/Pages/Shared/_Layout.cshtml
+++ b/HandballResults/Pages/Shared/_Layout.cshtml
@@ -5,18 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed" />
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <!--
+    Styles.Render("~/Content/css")
+    Scripts.Render("~/bundles/modernizr")
+    -->
 
 </head>
 <body>
     <div class="container body-content">
         @RenderBody()
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/application")
+    
+    <!--
+    Scripts.Render("~/bundles/jquery")
+    Scripts.Render("~/bundles/bootstrap")
+    Scripts.Render("~/bundles/application")
+    -->
     @RenderSection("scripts", required: false)
     <script type="text/javascript">
         function openInNewWindow(url) {
