fix embedded mode

--- a/HandballResults/Views/Teams/Index.cshtml
+++ b/HandballResults/Views/Teams/Index.cshtml
@@ -4,41 +4,17 @@
     ViewBag.Title = "Resultate & Spiele";
 }
 
-<div id="schedule" class="shv-container">
+<div id="schedule" class="shv-container" data-attr-team-id="@Model.TeamId">
     <div class="loading-indicator"></div>
 </div>
 
-<div id="standings" class="shv-container">
+<div id="standings" class="shv-container" data-attr-team-id="@Model.TeamId">
     <div class="loading-indicator"></div>
 </div>
 
-<div id="results" class="shv-container">
+<div id="results" class="shv-container" data-attr-team-id="@Model.TeamId">
     <div class="loading-indicator"></div>
 
 </div>
 
-
-@section scripts
-{
-    <script type="text/javascript">
-        function contentLoaded(container) {
-            $(container).siblings().show();
-        }
-
-        $(document).ready(function () {
-            $("#schedule").load('@(Url.Action("Schedule", "Games", null, Context.Request.Scheme))', function (response, status, xhr) {
-                if (status !== "error") {
-                    contentLoaded($(this));
-                    initSchedule();
-                }
-            });
-            $("#standings").load('@(Url.Action("Team", "Group", null, Context.Request.Scheme))');
-            $("#results").load('@(Url.Action("Results", "Games", null, Context.Request.Scheme))', function (response, status, xhr) {
-                if (status !== "error") {
-                    contentLoaded($(this));
-                    initResults();
-                }
-            });
-        });
-    </script>
-}
+<script src="~/dist/team.entry.js" defer></script>
