--- a/HandballResults/Views/Group/Team.cshtml
+++ b/HandballResults/Views/Group/Team.cshtml
@@ -26,20 +26,23 @@
     
     @{
         var pos = 1;
-        foreach ( var ranking in Model.Group.Ranking)
+        if (Model.Group?.Ranking != null)
         {
-            <tr>
-                <td>@(pos++)</td>
-                <td>@ranking.TeamName</td>
-                <td>@ranking.TotalGames</td>
-                <td>@ranking.TotalPoints</td>
-                <td>@ranking.TotalWins</td>
-                <td>@ranking.TotalDraws</td>
-                <td>@ranking.TotalLoss</td>
-                <td>@ranking.TotalScoresPlus</td>
-                <td>@ranking.TotalScoresMinus</td>
-                <td>@ranking.TotalScoresDiff</td>
-            </tr>
+            foreach (var ranking in Model.Group.Ranking)
+            {
+                <tr>
+                    <td>@(pos++)</td>
+                    <td>@ranking.TeamName</td>
+                    <td>@ranking.TotalGames</td>
+                    <td>@ranking.TotalPoints</td>
+                    <td>@ranking.TotalWins</td>
+                    <td>@ranking.TotalDraws</td>
+                    <td>@ranking.TotalLoss</td>
+                    <td>@ranking.TotalScoresPlus</td>
+                    <td>@ranking.TotalScoresMinus</td>
+                    <td>@ranking.TotalScoresDiff</td>
+                </tr>
+            }
         }
     }
 
