--- a/HandballResults/ClientApp/src/css/site.css
+++ b/HandballResults/ClientApp/src/css/site.css
@@ -92,16 +92,9 @@ ul.games {
 }
 
     ul.games li {
-        padding: 0 10px;
+        padding: 20px 10px;
         border-bottom: 1px solid lightgrey;
     }
-
-        ul.games li a {
-            text-decoration: none;
-            color: black;
-            display: block;
-            padding: 20px 0;
-        }
 
         ul.games li .col:first-child {
             width: 95%;
